name:                annuity
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/freefrancisco/annuity#readme
license:             BSD3
license-file:        LICENSE
author:              Francisco Gutierrez
maintainer:          freefrancisco@gmail.com
copyright:           Copyright: (c) 2017 Francisco Gutierrez
category:            Finance, Utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable annuity
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
